Change translations.xml also

--- a/programming/language/python/python-qt/translations.xml
+++ b/programming/language/python/python-qt/translations.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" ?>
 <PISI>
     <Source>
-        <Name>PyQt</Name>
+        <Name>python-qt</Name>
         <Summary xml:lang="tr">Qt 4.x araçları için python bağlayıcıları</Summary>
         <Description xml:lang="tr">Qt, C++ kütüphaneleri dizisi ve geliştirme araçları olup grafik kullanıcı arabirimleri için, ağ bağlantısı, iş parçacığı, Unicode, düzenli ifadeler, SQL veritabanları, SVG, OpenGL, XML ve kullanıcıve uygulama ayarları gibi platform bağımsız uygulamalara ayrılır. PyQt, Python modülü seti olarak bu sınıftan 440 kadar uygulamayı çalıştırır.</Description>
         <Description xml:lang="fr">Qt est un ensemble de librairies C++ et d'outils de développement. On y trouve des abstractions indépendante de la plateforme utilisée pour les interfaces graphiques, le réseau, les threads, Unicode, les expressions régulières, les bases de données SQL, SVG, OpenGL, XML, la gestion des paramètres utilisateurs. PyQT implémente 440 de ces classes en tant que modules Python.</Description>
@@ -9,22 +9,22 @@
     </Source>
 
     <Package>
-        <Name>PyQt-webkit</Name>
+        <Name>python-qt-webkit</Name>
         <Summary xml:lang="tr">Webkit kitaplığı için Python bağlayıcıları</Summary>
     </Package>
 
     <Package>
-        <Name>PyQt-phonon</Name>
+        <Name>python-qt-phonon</Name>
         <Summary xml:lang="tr">Phonon çokluortam kitaplığı için Python bağlayıcıları</Summary>
     </Package>
 
     <Package>
-        <Name>PyQt-docs</Name>
-        <Summary xml:lang="tr">PyQt bağlayıcıları için belgelendirme</Summary>
+        <Name>python-qt-docs</Name>
+        <Summary xml:lang="tr">python-qt bağlayıcıları için belgelendirme</Summary>
     </Package>
 
     <Package>
-        <Name>PyQt-devel</Name>
-        <Summary xml:lang="tr">PyQt için geliştirme dosyaları</Summary>
+        <Name>python-qt-devel</Name>
+        <Summary xml:lang="tr">python-qt için geliştirme dosyaları</Summary>
     </Package>
 </PISI>
