Change all PyQt* deps to  python-qt*

--- a/programming/language/python/python-qt/pspec.xml
+++ b/programming/language/python/python-qt/pspec.xml
@@ -69,7 +69,7 @@
         <Name>python-qt-webkit</Name>
         <Summary>Python bindings for QtWebkit library</Summary>
         <RuntimeDependencies>
-            <Dependency releaseFrom="47">python-qt</Dependency>
+            <Dependency versionFrom="4.7.6">python-qt</Dependency>
             <Dependency versionFrom="4.7.0_beta2">qt-webkit</Dependency>
         </RuntimeDependencies>
         <Conflicts>
@@ -89,7 +89,7 @@
         <Name>python-qt-phonon</Name>
         <Summary>Python bindings for Phonon multimedia library</Summary>
         <RuntimeDependencies>
-            <Dependency releaseFrom="47">python-qt</Dependency>
+            <Dependency versionFrom="4.7.6">python-qt</Dependency>
             <Dependency versionFrom="4.4.2">phonon</Dependency>
         </RuntimeDependencies>
         <Conflicts>
