--- a/programming/language/python/pyqtermwidget/pspec.xml
+++ b/programming/language/python/pyqtermwidget/pspec.xml
@@ -15,7 +15,7 @@
         <Archive sha1sum="6dc64a5d5ab7b1442866d18ba9e2557cc18440cd" type="targz">http://pyqt4-extrawidgets.googlecode.com/files/qtermwidget-0.1.2.tar.gz</Archive>
         <BuildDependencies>
             <Dependency versionFrom="4.6.2">qt-devel</Dependency>
-            <Dependency versionFrom="4.7.5">PyQt-devel</Dependency>
+            <Dependency versionFrom="4.7.6">python-qt-devel</Dependency>
             <Dependency versionFrom="4.11">sip-devel</Dependency>
             <Dependency>qtermwidget-devel</Dependency>
         </BuildDependencies>
@@ -28,7 +28,7 @@
         <Name>pyqtermwidget</Name>
         <RuntimeDependencies>
             <Dependency>qt</Dependency>
-            <Dependency versionFrom="4.7.5">PyQt</Dependency>
+            <Dependency versionFrom="4.7.6">python-qt</Dependency>
             <Dependency versionFrom="4.11">sip</Dependency>
             <Dependency>qtermwidget</Dependency>
         </RuntimeDependencies>
