--- a/programming/language/python/python-qt/pspec.xml
+++ b/programming/language/python/python-qt/pspec.xml
@@ -22,6 +22,7 @@
         </BuildDependencies>
         <Patches>
             <Patch>add_gettext_support.patch</Patch>
+            <Patch level="1">fix-pyuic-encoding.diff</Patch>
         </Patches>
     </Source>
 
