--- a/kernel/default/kernel/TODO
+++ b/kernel/default/kernel/TODO
@@ -2,21 +2,14 @@ TODO for 2011 kernel
 --------------------
 
 (-) SCSI HPSA SAS driver enabled in config, try it on the servers
-(-) We may turn off CAN, DAC, regulator stuff
-(-) Grab lirc from staging, sync from fedora
-(-) New HID y/M?
-(-) Comedi
 (-) ATH3K bt firmware
-(-) VMWare DRM driver enabled (do we have to do sth in userspace, fatih?)
-(-) Toshiba BT rfkill driver enabled (omnibook)
+(+) Grab lirc from staging, sync from fedora
+(/50) Toshiba BT rfkill driver enabled, check omnibook
 
 (-) Sync AuFS from Ubuntu
-(-) Sync AppArmor
-(-) Grab newer NFS4ACL patches from suse
-(-) Enable TuxOnIce
-(-) Sync squashfs-lzma patches from upstream
+(?) Grab newer NFS4ACL patches from suse
+(/50) Enable TuxOnIce
 
 (-) Config refinement
 (-) Debug spins
 (-) kerneltools improvements
-
