Fix another pyuic issue about QString class.

--- a/programming/language/python/python-qt/pspec.xml
+++ b/programming/language/python/python-qt/pspec.xml
@@ -23,6 +23,7 @@
         <Patches>
             <Patch>add_gettext_support.patch</Patch>
             <Patch level="1">fix-pyuic-encoding.diff</Patch>
+            <Patch level="1">fix-pyuic-qstring-issue.diff</Patch>
         </Patches>
     </Source>
 
@@ -31,9 +32,9 @@
         <Summary>Development files for python-qt</Summary>
         <RuntimeDependencies>
             <Dependency>qt-devel</Dependency>
-            <Dependency release="48">python-qt</Dependency>
-            <Dependency release="48">python-qt-webkit</Dependency>
-            <Dependency release="48">python-qt-phonon</Dependency>
+            <Dependency release="49">python-qt</Dependency>
+            <Dependency release="49">python-qt-webkit</Dependency>
+            <Dependency release="49">python-qt-phonon</Dependency>
             <Dependency versionFrom="4.11.1">sip-devel</Dependency>
         </RuntimeDependencies>
         <Conflicts>
@@ -122,6 +123,13 @@
     </Package>
 
     <History>
+        <Update release="49">
+            <Date>2010-09-15</Date>
+            <Version>4.7.6</Version>
+            <Comment>Fix another pyuic issue about QString class.</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="48">
             <Date>2010-09-13</Date>
             <Version>4.7.6</Version>
