* Fix add_gettext support for pyuic

--- a/programming/language/python/python-qt/pspec.xml
+++ b/programming/language/python/python-qt/pspec.xml
@@ -32,9 +32,9 @@
         <Summary>Development files for python-qt</Summary>
         <RuntimeDependencies>
             <Dependency>qt-devel</Dependency>
-            <Dependency release="49">python-qt</Dependency>
-            <Dependency release="49">python-qt-webkit</Dependency>
-            <Dependency release="49">python-qt-phonon</Dependency>
+            <Dependency release="50">python-qt</Dependency>
+            <Dependency release="50">python-qt-webkit</Dependency>
+            <Dependency release="50">python-qt-phonon</Dependency>
             <Dependency versionFrom="4.11.1">sip-devel</Dependency>
         </RuntimeDependencies>
         <Conflicts>
@@ -123,6 +123,13 @@
     </Package>
 
     <History>
+        <Update release="50">
+            <Date>2010-09-16</Date>
+            <Version>4.7.6</Version>
+            <Comment>Fix add_gettext support for pyuic</Comment>
+            <Name>Gökmen Göksel</Name>
+            <Email>gokmen@pardus.org.tr</Email>
+        </Update>
         <Update release="49">
             <Date>2010-09-15</Date>
             <Version>4.7.6</Version>
