--- a/programming/language/java/hsqldb/pspec.xml
+++ b/programming/language/java/hsqldb/pspec.xml
@@ -11,7 +11,7 @@
         <License>as-is</License>
         <IsA>library</IsA>
         <Summary>A relational database engine written in Java, with a JDBC driver</Summary>
-        <Archive sha1sum="15b1ece2f131bdb007cae5762f631e8d5fd6eaae" type="zip">mirrors://sourceforge/project/hsqldb/hsqldb/hsqldb_1_8_1/hsqldb_1_8_1_3.zip</Archive>
+        <Archive sha1sum="7168b0f40aa5c72267899601c116d2348d2f56ec" type="zip">mirrors://sourceforge/project/hsqldb/hsqldb/hsqldb_1_8_0/hsqldb_1_8_0_10.zip</Archive>
         <BuildDependencies>
             <Dependency>sun-jdk</Dependency>
             <Dependency>ant</Dependency>
@@ -30,6 +30,13 @@
     </Package>
 
     <History>
+        <Update release="7">
+            <Date>2010-09-18</Date>
+            <Version>1.8.0.10</Version>
+            <Comment>Downgrade to 1.8.0.x again since OO.org needs that series.</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="6">
             <Date>2010-09-16</Date>
             <Version>1.8.1.3</Version>
