Add warning about 1.8.1 series

--- a/programming/language/java/hsqldb/pspec.xml
+++ b/programming/language/java/hsqldb/pspec.xml
@@ -12,6 +12,7 @@
         <IsA>library</IsA>
         <Summary>A relational database engine written in Java, with a JDBC driver</Summary>
         <Archive sha1sum="7168b0f40aa5c72267899601c116d2348d2f56ec" type="zip">mirrors://sourceforge/project/hsqldb/hsqldb/hsqldb_1_8_0/hsqldb_1_8_0_10.zip</Archive>
+        <!-- Do not upgrade this package to version 1.8.1 series unless you are sure that OpenOffice supports that version -->
         <BuildDependencies>
             <Dependency>sun-jdk</Dependency>
             <Dependency>ant</Dependency>
