--- a/desktop/kde/l10n/kde-l10n-ca/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ca/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ca</IsA>
         <Summary>Catalan KDE4 internationalization package</Summary>
         <Description>kde-l10n-ca is the KDE4 internationalization package that provides Catalan translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="fc5597a452b36206693ddaf869c4a1d0e24845e7">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-ca-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="55f0ca91c4e560aaf33971a4f13502cde4296810">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-ca-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="27">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="26">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
