--- a/desktop/kde/l10n/kde-l10n-es/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-es/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:es</IsA>
         <Summary>Spanish KDE4 internationalization package</Summary>
         <Description>kde-l10n-es is the KDE4 internationalization package that provides Spanish translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="4093fa5dfb4b9ea91227244f68dc1c69ce4364a6">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-es-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="d09cba69bcad676756097b6798c56dfa1b41525a">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-es-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="27">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="26">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
