--- a/desktop/kde/l10n/kde-l10n-gl/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-gl/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:gl</IsA>
         <Summary>Galician KDE4 internationalization package</Summary>
         <Description>kde-l10n-gl is the KDE4 internationalization package that provides Galician translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="8f3b6bffc68a90b31195d28d0954cc4cf68a06d2">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-gl-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="433af75f2505e4d9a5f6fd0b57f0ef14089be84c">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-gl-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="26">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="25">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
