--- a/desktop/kde/l10n/kde-l10n-hi/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-hi/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:hi</IsA>
         <Summary>Hindi KDE4 internationalization package</Summary>
         <Description>kde-l10n-hi is the KDE4 internationalization package that provides Hindi translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="7bdaeee03d3b8bfc48305a1a59276c5d6b53d510">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-hi-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="9022b626fdefd4a463fb80519a1c009d5889342f">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-hi-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="26">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="25">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
