--- a/desktop/kde/l10n/kde-l10n-is/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-is/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:is</IsA>
         <Summary>Icelandic KDE4 internationalization package</Summary>
         <Description>kde-l10n-is is the KDE4 internationalization package that provides Icelandic translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="b3a737410682f2065dec9d300bd0818fdadd272c">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-is-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="542fd99ba8f735c5fd2b285923a701163bc8d27f">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-is-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="13">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="12">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
