--- a/desktop/kde/l10n/kde-l10n-nb/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-nb/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:nb</IsA>
         <Summary>Norwegian Bookmal KDE4 internationalization package</Summary>
         <Description>kde-l10n-nb is the KDE4 internationalization package that provides Norwegian Bookmal translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="1a3811a6f316b81cdae5fcaa40cf438ff900a970">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-nb-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="f5c7c8f8b325bfbd367419391ebce8eb3db0c1ce">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-nb-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="26">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="25">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
