--- a/desktop/kde/l10n/kde-l10n-pa/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-pa/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:pa</IsA>
         <Summary>Punjabi KDE4 internationalization package</Summary>
         <Description>kde-l10n-pa is the KDE4 internationalization package that provides Punjabi translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="aed754f717911b95035f0c5064c5953404a45bb5">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-pa-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="79b1ec9772b51c5606d0c9ffe0e1e682aae60018">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-pa-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="26">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="25">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
