--- a/desktop/kde/l10n/kde-l10n-pt_BR/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-pt_BR/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:pt_BR</IsA>
         <Summary>Brasilian Portuguese KDE4 internationalization package</Summary>
         <Description>kde-l10n-pt-BR is the KDE4 internationalization package that provides Brasilian Portuguese translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="ce31e917306b8f2fa2c6cbd21e54005b75ded6f8">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-pt_BR-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="73b253691dee188b3587bb599f2f323e7c4e4fbb">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-pt_BR-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="27">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="26">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
