--- a/desktop/kde/l10n/kde-l10n-sr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-sr/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:sr</IsA>
         <Summary>Serbian KDE4 internationalization package</Summary>
         <Description>kde-l10n-sr is the KDE4 internationalization package that provides Serbian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="87fce64469c0cd18421eff6fe4966c0b33e3c003">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-sr-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="7b28e4447e3a38c2efb6cecd2b629dddcdfc9360">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-sr-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -32,6 +32,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="13">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="12">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
