--- a/desktop/kde/l10n/kde-l10n-sv/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-sv/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:sv</IsA>
         <Summary>Swedish KDE4 internationalization package</Summary>
         <Description>kde-l10n-sv is the KDE4 internationalization package that provides Swedish translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="80f8653d535e50fead22afeca5ba0a1d52c790d7">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-sv-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="bc38bf19ced6828e0b56586260220961fb3471d7">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-sv-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="22">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="21">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
