--- a/desktop/kde/l10n/kde-l10n-tr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:tr</IsA>
         <Summary>Turkish KDE4 internationalization package</Summary>
         <Description>kde-l10n-tr is the KDE4 internationalization package that provides Turkish translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="bdbd88a345b9ba419b5158cd9c16a06d9a0358e8">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-tr-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="44b0857560fbdd15889b56378fee1710744ad630">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-tr-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -85,6 +85,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="50">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="49">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
