--- a/desktop/kde/l10n/kde-l10n-wa/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-wa/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:wa</IsA>
         <Summary>Walloon KDE4 internationalization package</Summary>
         <Description>kde-l10n-wa is the KDE4 internationalization package that provides Walloon translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="d1d36ac7331b3142db9660bc9c79474308752f0f">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-wa-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="bbd504215e34ec16ae80fe575625b63f07fb443f">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-wa-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="18">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="17">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
