--- a/desktop/kde/l10n/kde-l10n-ar/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ar/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ar</IsA>
         <Summary>Arabic KDE4 internationalization package</Summary>
         <Description>kde-l10n-ar is the KDE4 internationalization package that provides Arabic translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="9096520c18ad3fc90e15bb02e3defc076de0fdf5">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-ar-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="26676027b9306f2aba8d2ed4068e12bd0d7a3860">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-ar-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="13">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="12">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
