--- a/desktop/kde/l10n/kde-l10n-da/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-da/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:da</IsA>
         <Summary>Danish KDE4 internationalization package</Summary>
         <Description>kde-l10n-da is the KDE4 internationalization package that provides Danish translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="9187a3ca1bc982265970c3747265fa64012fd955">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-da-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="56724d67fa8f639e994ffc4c548e52dc2f2d72cd">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-da-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="18">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="17">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
