--- a/desktop/kde/l10n/kde-l10n-de/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-de/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:de</IsA>
         <Summary>German KDE4 internationalization package</Summary>
         <Description>kde-l10n-de is the KDE4 internationalization package that provides German translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="9bc35a343933161ed0b02d012f2d581aa0346539">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-de-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="277484f85885351b2839862f47ffcf9896e93315">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-de-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="27">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="26">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
