--- a/desktop/kde/l10n/kde-l10n-el/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-el/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:el</IsA>
         <Summary>Greek KDE4 internationalization package</Summary>
         <Description>kde-l10n-el is the KDE4 internationalization package that provides Greek translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="be89d3c509177a98b7d619bab29421cca1796664">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-el-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="13a5a2361623cfd3420920b4c50ca117635133a5">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-el-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="26">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="25">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
