--- a/desktop/kde/l10n/kde-l10n-en_GB/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-en_GB/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:en_GB</IsA>
         <Summary>British English KDE4 internationalization package</Summary>
         <Description>kde-l10n-en_GB is the KDE4 internationalization package that provides British English translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="c5a0fa9c6d15bf7e2ca98b5adf5ab453e78d55ae">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-en_GB-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="5f1bcae32992d3faf5d0cf5973ae01aa46cea5b2">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-en_GB-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="26">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="25">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
