--- a/desktop/kde/l10n/kde-l10n-eu/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-eu/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:eu</IsA>
         <Summary>Basque KDE4 internationalization package</Summary>
         <Description>kde-l10n-eu is the KDE4 internationalization package that provides Basque translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="d6b15f1094dec075314d2a4edc699f2b99f5a97f">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-eu-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="28e45081015f3dbc18dfe7f79dfd407056b1af3a">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-eu-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="13">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="12">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
