--- a/desktop/kde/l10n/kde-l10n-ga/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ga/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ga</IsA>
         <Summary>Irish Gaelic KDE4 internationalization package</Summary>
         <Description>kde-l10n-ga is the KDE4 internationalization package that provides Irish Gaelic translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="4265edda5448dd3f8dd6c339cbb2d5b2b7e3e324">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-ga-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="3b241d3d314e3dcce93274eeb842bf17f4be11b9">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-ga-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="26">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="25">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
