--- a/desktop/kde/l10n/kde-l10n-he/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-he/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:he</IsA>
         <Summary>Hebrew KDE4 internationalization package</Summary>
         <Description>kde-l10n-he is the KDE4 internationalization package that provides Hebrew translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="ea405a9235b50e43d7df65157aeafd2bd8c4ac43">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-he-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="c68cf0207361ab174e9aaf930f7fa8476c6d3c5d">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-he-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="13">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="12">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
