--- a/desktop/kde/l10n/kde-l10n-kk/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-kk/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:kk</IsA>
         <Summary>Kazakh KDE4 internationalization package</Summary>
         <Description>kde-l10n-kk is the KDE4 internationalization package that provides Kazakh translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="57da9ad0358b88035d57ae7313ee17591b359bcb">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-kk-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="4872179f7fd0986ed38a1cddd276d8d7c631675d">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-kk-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="18">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="17">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
