--- a/desktop/kde/l10n/kde-l10n-km/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-km/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:km</IsA>
         <Summary>Khmer KDE4 internationalization package</Summary>
         <Description>kde-l10n-km is the KDE4 internationalization package that provides Khmer translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="f59564b68edd1aad6e8e080f0bb123b540a044ba">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-km-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="4bf0fef2a59fec892222f239618fffee914f0bc2">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-km-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="26">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="25">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
