--- a/desktop/kde/l10n/kde-l10n-lv/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-lv/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:lv</IsA>
         <Summary>Latvian KDE4 internationalization package</Summary>
         <Description>kde-l10n-lv is the KDE4 internationalization package that provides Latvian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="b38df9714929aa6a83ef1170d77ccde5b7330970">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-lv-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="fb207bd9c172c6eceed6dae92e605cf63c164764">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-lv-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="26">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="25">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
