--- a/desktop/kde/l10n/kde-l10n-pt/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-pt/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:pt</IsA>
         <Summary>Portuguese KDE4 internationalization package</Summary>
         <Description>kde-l10n-pt is the KDE4 internationalization package that provides Portuguese translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="ac6c9ffe557534fc1dcd458b29501a22340865cf">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-pt-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="4c9a022857e3e08eec1b97c62ba7f0ba0efb1e81">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-pt-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="26">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="25">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
