--- a/desktop/kde/l10n/kde-l10n-sk/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-sk/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:sk</IsA>
         <Summary>Slovak KDE4 internationalization package</Summary>
         <Description>kde-l10n-sk is the KDE4 internationalization package that provides Slovak translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="a5a74c9997f04f14268530d31d2cb33641a827cb">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-sk-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="8a69d919b1645e61cb6ce128085a9b63a9197e9c">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-sk-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="13">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="12">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
