--- a/desktop/kde/l10n/kde-l10n-zh_CN/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-zh_CN/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:zh_CN</IsA>
         <Summary>Chinese Simplified KDE4 internationalization package</Summary>
         <Description>kde-l10n-zh_CN is the KDE4 internationalization package that provides Chinese Simplified translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="4fdf488aed4dd7d46e901061c80f3550f58528ab">mirrors://kde/stable/4.5.0/src/kde-l10n/kde-l10n-zh_CN-4.5.0.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="006f667831326cc26434b340313f96544d92ba45">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-zh_CN-4.5.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="26">
+            <Date>2010-09-19</Date>
+            <Version>4.5.1</Version>
+            <Comment>Version bump to 4.5.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="25">
             <Date>2010-08-24</Date>
             <Version>4.5.0</Version>
