Shorten data information of bbc.co.uk comes from plasma weather data engine.
BUG:COMMENT:14401

--- a/desktop/kde/l10n/kde-l10n-tr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/pspec.xml
@@ -60,6 +60,8 @@
 
             <!-- Fix for #13842 -->
             <Patch level="1">fix-xdg-user-dirs-translations.diff</Patch>
+
+            <Patch level="1">fix-weather-info-translation.diff</Patch>
         </Patches>
     </Source>
     <Package>
