take over some dependencies of spamassassin

--- a/programming/language/perl/perl-Hook-LexWrap/pspec.xml
+++ b/programming/language/perl/perl-Hook-LexWrap/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-Hook-LexWrap</Name>
         <Homepage>http://search.cpan.org/dist/Hook-LexWrap/</Homepage>
         <Packager>
-            <Name>Necdet Yücel</Name>
-            <Email>necdetyucel@gmail.com</Email>
+            <Name>Mesutcan Kurt</Name>
+            <Email>mesutcank@gmail.com</Email>
         </Packager>
         <License>Artistic</License>
         <License>GPLv2</License>
