--- a/programming/language/perl/perl-Math-Base85/pspec.xml
+++ b/programming/language/perl/perl-Math-Base85/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-Math-Base85</Name>
         <Homepage>http://search.cpan.org/~tmonroe/Math-Base85/</Homepage>
         <Packager>
-            <Name>Necdet Yücel</Name>
-            <Email>nyucel@comu.edu.tr</Email>
+            <Name>Mesutcan Kurt</Name>
+            <Email>mesutcank@gmail.com</Email>
         </Packager>
         <License>Artistic</License>
         <License>GPLv2</License>
