--- a/programming/language/perl/perl-Device-SerialPort/pspec.xml
+++ b/programming/language/perl/perl-Device-SerialPort/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-Device-SerialPort</Name>
         <Homepage>http://search.cpan.org/dist/Device-SerialPort/</Homepage>
         <Packager>
-            <Name>Necdet Yücel</Name>
-            <Email>necdetyucel@gmail.com</Email>
+            <Name>Mesutcan Kurt</Name>
+            <Email>mesutcank@gmail.com</Email>
         </Packager>
         <License>Artistic</License>
         <IsA>library</IsA>
