--- a/programming/language/perl/perl-Encode-Detect/pspec.xml
+++ b/programming/language/perl/perl-Encode-Detect/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-Encode-Detect</Name>
         <Homepage>http://search.cpan.org/dist/Encode-Detect</Homepage>
         <Packager>
-            <Name>Necdet Yücel</Name>
-            <Email>necdetyucel@gmail.com</Email>
+            <Name>Mesutcan Kurt</Name>
+            <Email>mesutcank@gmail.com</Email>
         </Packager>
         <License>MPL-1.1</License>
         <IsA>library</IsA>
