--- a/programming/language/perl/perl-Regexp-IPv6/pspec.xml
+++ b/programming/language/perl/perl-Regexp-IPv6/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-Regexp-IPv6</Name>
         <Homepage>http://search.cpan.org/~salva/Regexp-IPv6/</Homepage>
         <Packager>
-            <Name>Necdet Yücel</Name>
-            <Email>nyucel@comu.edu.tr</Email>
+            <Name>Mesutcan Kurt</Name>
+            <Email>mesutcank@gmail.com</Email>
         </Packager>
         <License>Artistic</License>
         <License>GPLv2</License>
