--- a/programming/language/perl/perl-Test-Pod-Coverage/pspec.xml
+++ b/programming/language/perl/perl-Test-Pod-Coverage/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-Test-Pod-Coverage</Name>
         <Homepage>http://search.cpan.org/dist/Test-Pod-Coverage/</Homepage>
         <Packager>
-            <Name>Necdet Yücel</Name>
-            <Email>necdetyucel@gmail.com</Email>
+            <Name>Mesutcan Kurt</Name>
+            <Email>mesutcank@gmail.com</Email>
         </Packager>
         <License>as-is</License>
         <IsA>library</IsA>
