--- a/programming/language/perl/perl-Text-Template/pspec.xml
+++ b/programming/language/perl/perl-Text-Template/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-Text-Template</Name>
         <Homepage>http://search.cpan.org/dist/Text-Template/</Homepage>
         <Packager>
-            <Name>Necdet Yücel</Name>
-            <Email>nyucel@comu.edu.tr</Email>
+            <Name>Mesutcan Kurt</Name>
+            <Email>mesutcank@gmail.com</Email>
         </Packager>
         <License>GPLv2</License>
         <IsA>library</IsA>
