--- a/programming/language/perl/perl-Tidy/pspec.xml
+++ b/programming/language/perl/perl-Tidy/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-Tidy</Name>
         <Homepage>http://perltidy.sourceforge.net</Homepage>
         <Packager>
-            <Name>Necdet Yücel</Name>
-            <Email>necdetyucel@gmail.com</Email>
+            <Name>Mesutcan Kurt</Name>
+            <Email>mesutcank@gmail.com</Email>
         </Packager>
         <License>Artistic</License>
         <License>GPLv2</License>
