add replaces tag

--- a/programming/language/python/python-Cheetah/pspec.xml
+++ b/programming/language/python/python-Cheetah/pspec.xml
@@ -21,6 +21,9 @@
         <RuntimeDependencies>
             <Dependency>python-markdown</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>cheetah</Package>
+        </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="executable">/usr/bin</Path>
