--- a/programming/language/python/telepathy-python/pspec.xml
+++ b/programming/language/python/telepathy-python/pspec.xml
@@ -11,7 +11,7 @@
         <License>LGPLv2+</License>
         <IsA>library</IsA>
         <Summary>Python libraries for Telepathy</Summary>
-        <Summary>telepathy-python is the Python libraries for use in Telepathy client and connection managers.</Summary>
+        <Description>telepathy-python is the Python libraries for use in Telepathy client and connection managers.</Description>
         <Archive sha1sum="40565d78d375746e4d008fc192c366bdcc8941ff" type="targz">http://telepathy.freedesktop.org/releases/telepathy-python/telepathy-python-0.15.18.tar.gz</Archive>
         <Patches>
             <Patch level="1">dont-compile-py.patch</Patch>
