rename to python-pyxdg, meh i hate the renaming stuff

--- a/programming/language/python/python-xdg/pspec.xml
+++ b/programming/language/python/python-xdg/pspec.xml
@@ -2,7 +2,7 @@
 <!DOCTYPE PISI SYSTEM "http://www.pardus.org.tr/projeler/pisi/pisi-spec.dtd">
 <PISI>
     <Source>
-        <Name>python-xdg</Name>
+        <Name>python-pyxdg</Name>
         <Homepage>http://freedesktop.org/wiki/Software/pyxdg</Homepage>
         <Packager>
             <Name>Gökmen Görgen</Name>
@@ -16,7 +16,7 @@
     </Source>
 
     <Package>
-        <Name>python-xdg</Name>
+        <Name>python-pyxdg</Name>
         <Replaces>
             <Package>pyxdg</Package>
         </Replaces>
