--- a/programming/language/python/python-xdg/translations.xml
+++ b/programming/language/python/python-xdg/translations.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" ?>
 <PISI>
     <Source>
-        <Name>python-xdg</Name>
+        <Name>python-pyxdg</Name>
         <Summary xml:lang="tr">Python için freedesktop.org standartları kütüphanesi</Summary>
         <Description xml:lang="tr">PyXDG, freedesktop.org standartlarına erişmek için yazılmış bir Python kütüphanesidir.</Description>
     </Source>
